# AoC_2023

./: .bazelrc  .clang-format  LICENSE  WORKSPACE.bazel  debug_features.hpp
day_01/: BUILD  main.cpp  scan_edge_digits.cpp  scan_edge_digits.hpp
day_01/tests/: BUILD  scan_edge_digits_tests.cpp
day_02/: BUILD  cube_conundrum.cpp  cube_conundrum.hpp  main.cpp
day_02/tests/: BUILD  cube_conundrum_tests.cpp
day_03/: gear_ratios.cpp  gear_ratios.hpp  main.cpp
day_03/task_1/: BUILD  gear_ratios.cpp  gear_ratios.hpp  main.cpp
day_03/task_2/: BUILD  CMakeLists.txt  gear_ratios.cpp  gear_ratios.hpp  main.cpp
day_04/: main.cpp  scratchcards.cpp  scratchcards.hpp
day_04/task_1/: BUILD  main.cpp  scratchcards.cpp  scratchcards.hpp
day_04/task_2/: BUILD  a.out  main.cpp  scratchcards.cpp  scratchcards.hpp
day_05/: main.cpp  seed_planter.cpp  seed_planter.hpp
day_05/task_1/: BUILD  main.cpp  seed_planter.cpp  seed_planter.hpp
day_05/task_2/: BUILD  main.cpp  seed_planter.cpp  seed_planter.hpp
day_06/task_1/: BUILD  boat_race.cpp  boat_race.hpp  main.cpp
day_07/task_1/: BUILD  camel_cards.cpp  camel_cards.hpp  main.cpp
day_07/task_2/: BUILD  camel_cards.cpp  camel_cards.hpp  main.cpp
day_08/task_1/: BUILD  haunted_wasteland.cpp  haunted_wasteland.hpp  main.cpp
day_08/task_2/: BUILD  haunted_wasteland.cpp  haunted_wasteland.hpp  main.cpp
day_08/task_3/: haunted_wasteland.cpp  haunted_wasteland.hpp  haunted_wasteland_multi  main.cpp
debug_features/: BUILD  debug_features.cpp  debug_features.hpp
path_helper/: BUILD  path_helper.cpp  path_helper.hpp
(+65 files in other folders)
